--- a/modules/core/src/main/resources/application.conf
+++ b/modules/core/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 kafka {
-  bootstrap-servers = "localhost:9092"
+  bootstrap-servers = "PLAINTEXT://localhost:9092"
   schema-registry-url = "http://localhost:8081"
   topic = "website-clicks"
   group-id = "es-sink-group"
